# DiCWO

./: .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-app.txt  requirements.txt  sitemap.xml  vercel.json
.github/workflows/: deploy-hf.yml
.streamlit/: config.toml
.vercel/: project.json
app/: app.py
app/components/: progress.py  sidebar.py
app/pages/: 1_Configure.py  2_Prompts.py  3_Run_Experiment.py  4_Results.py
app/utils/: defaults.py  runner_thread.py  session.py
configs/: centralized_manager.yaml  dicwo.yaml  single_agent.yaml
configs/domain/: dthh_mission.yaml
docs/: index.md
docs/evaluation/: judge.md  overview.md  scoresheet.md  validators.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: api.md  domain.md  prompt-architecture.md  results.md
docs/systems/: centralized.md  dicwo.md  overview.md  single-agent.md
evaluation/judge/: index.html
evaluation/overview/: index.html
evaluation/scoresheet/: index.html
evaluation/validators/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
notebooks/: 01_run_experiments.ipynb  02_analyze_results.ipynb  03_compare_systems.ipynb
reference/api/: index.html
reference/domain/: index.html
scripts/: generate_dicwo_diagram.py  generate_dimension_analysis.py  generate_paper_charts.py  rejudge_single_agent.py  run_all.py  run_experiment.py  run_multimodel.sh
search/: search_index.json
(+40 files in other folders)
